kubernetes/catalog/calibre-web/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre-web.int.infraweaver.local`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: calibre-web
          port: 8083
  tls:
    store:
      name: default
      namespace: traefik
